frontend/src/AppBuilder/CodeEditor/styles.scss
/* ... */
.query-manager-sort-filter-popup {
    .cm-base-autocomplete {
        position: fixed !important;
        top: 130px !important;
    }
}

.canvas-codehinter-container {
    .cm-base-autocomplete {
        position: fixed !important;
        top: 500px !important;
        left: 38px !important;
    }
}

.widget-code-editor {
    height: 100%;

    .cm-content {
        max-width: 100% !important;
        white-space: pre-wrap;
        word-wrap: break-word;
    }
}

.ͼ1 .cm-placeholder {
    vertical-align: middle;
}

.codehinter-multi-line-input, .rest-api-tabpanes-body {
    .cm-content {
        padding: 8px 12px !important;
    }
}

.portal-container{
    .cm-editor{
        height: 100% !important;
    }
}

.code-hinter-wrapper {
    // in query panel we want the height of editor to increase depending on the content 
    &.code-editor-query-panel{
        display: flex;
        .query-hinter{
            flex-grow: 1;
        }
        .cm-editor {
            min-height: 150px !important;
        }
    }
    .code-editor-query-panel{
        &.show-line-numbers{
            .cm-editor {
                min-height: 220px ;
                max-height: 2500px ;
                .cm-scroller {
                    flex-grow: 1 !important;
                }
            }
        }
    }
    .cm-editor {
        min-height: 32px;
        max-height: 220px;
    }
}

.codehinter-input {
    font-family: IBM Plex Sans;
    font-size: 12px !important;
    display: block;
    // width: 100%;
    font-weight: 400;
    color: var(--slate9);
    background-clip: padding-box;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    cursor: text;
    justify-content: center;


    .cm-tooltip-autocomplete {
        @extend .cm-base-autocomplete;
    }

    .cm-editor {
        min-height: 32px;
        justify-content: center !important;

    }
}

.codehinter-input.focused {

    .cm-editor {
        outline: none;
        border: 2px solid #4368E3 !important;
        justify-content: center !important;
    }
}

.modal-body {
    .codehinter-multi-line-input {
        .cm-editor {
            height: 100%;
        }
    }
}
    // in query panel we want the height of editor to increase depending on the content 

.code-editor-query-panel{
    .codehinter-multi-line-input {
        .cm-editor {
            max-height: 2500px !important;
            height: 100%;
        }
    }
    
}

.codehinter-multi-line-input {
    height: 100%;

    .cm-editor {
        // min-height: 300px;
        // height: 300px;
        max-height: fit-content !important;

        .cm-gutters {
            width: 42px;
            background-color: var(--interactive-default) !important;
            color: var(--text-disabled) !important;
            border-right: 1px solid var(--borders-disabled-on-white) !important;
        }
    }

    .cm-tooltip-autocomplete {
        @extend .cm-base-autocomplete;
        top: content-box !important;

        .cm-completionInfo {
            @extend .cm-base-hint-info;
        }
    }
}



.suggest-list-item {
    color: var(--text-default, #1B1F24);
    font-family: IBM Plex Sans;
    font-size: 11px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
    /* 145.455% */

    &:hover,
    &:active {
        border-radius: 0 !important;
    }
}

.curly-braces {
    color: #1E823B;
}

.styled-par {
    color: #1E823B;
}

.cm-codehinter-dark-themed {
    .cm-tooltip-autocomplete {
        border-color: var(--slate5) !important;
    }

    .cm-tooltip-autocomplete>ul>completion-section {
        background: var(--slate5);
        color: #c9cbcf !important;
    }

    .cm-tooltip-autocomplete>ul>li {
        background: var(--surfaces-surface-02);
        color: #c9cbcf !important;
    }
}

.cm-scroller {
    overflow-y: auto !important;
    overflow-x: hidden !important;
    overscroll-behavior: contain;
}

.cm-focused {
    outline: none !important;
}

.cm-editor {
    border: 1px solid var(--slate7);
    border-radius: 4px;
    transition: box-shadow 0.15s ease-in-out;
}

.fields-container {
    .cm-editor {
        border-radius: 0 !important;
        box-shadow: none !important;
    }
}

.codehinter-popup{
    .cm-editor{
        border-radius: 0 0 4px 4px !important;
        //box-shadow: none !important;
    }
}

.rest-api-tab-content {
    .fields-container {
        .rest-api-codehinter-key-field {
            .cm-editor {
                border-radius: 4px 0px 0px 4px !important;
                box-shadow: none !important;
            }
        }
    }
}

.rest-api-body-codehinter {
    .cm-editor {
        min-height: 150px !important;
    }
}

.border-danger {
    .cm-editor {
        border: 1px solid red !important;
    }
}

//.runjs-editor .cm-editor {
//    border: none !important;
//}

.preview-alert-banner {
    height: fit-content;
    max-height: 300px;
    border: none !important;
}


.code-hinter-preview-card-body::-webkit-scrollbar {
    width: 4px !important;
}

.code-hinter-preview-card-body::-webkit-scrollbar-track {
    margin: 5px !important;
}

.code-hinter-preview-card-body>.codehinter-popup-icon {
    left: 2px !important;
}

.editor-container {
    .codehinter-input .cm-editor {
        max-height: auto !important;
        justify-content: center;
    }
}



.codehinter-error-banner {
    color: #D72D39 !important;
    background-color: #FCEEEF !important;
    font-size: 12px !important;
}

.codehinter-success-banner {
    color: #1E823B !important;
    background-color: #E8F3EB !important;
    font-size: 12px !important;

}

.cm-gutterElement {
    color: var(--text-disabled);
}

.rest-api-tabpanes-body {
    .cm-gutters {
        width: 42px !important;
        background-color: var(--interactive-default) !important;
        color: var(--text-disabled) !important;
        border-right: 1px solid var(--borders-disabled-on-white) !important;
    }
}

.cm-content {
    padding-right: 20px !important;
}
/* ... */

